<resources>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="app_name">StudiChatter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_config">Configuracion</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings added for the project -->
    <string name="TextInput">Escribe Algo!</string>
    <string name="Imagen">Descripcion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="Close">Cerrar</string>
    <string name="Test">Prueba</string>
    <string name="Materia01">Requerimientos De Sistemas</string>
    <string name="Materia02">Elementos De Álgebra Y De Geometria</string>
    <string name="Materia03">Estructuras De Datos</string>
    <string name="Materia04">Organización De Computadoras</string>
    <string name="Materia05">Lenguajes Formales Y Autómatas</string>
    <string name="Materia06">Análisis Matemático I</string>
    <string name="Materia07">Análisis Matemático II</string>
    <string name="Materia08">Física I</string>
    <string name="Materia09">Física II IS</string>
    <string name="Materia11">Varios</string>
    <string name="Materia10">Química IS</string>
    <string name="Developed_by">Desarrolladores:</string>
    <string name="D1">-Ceballos Vitale Pablo Guillermo</string>
    <string name="D2">-Sacomani Franco</string>
    <string name="D3">-Gómez Tomás Alejandro</string>
    <string name="Log_out">Log Out</string>
    <string name="About">Sobre StudiChatter</string>
    <string name="Go_back">Atras</string>
    <string name="Copyright">© 2018 Universidad Nacional Del Sur</string>
    <string name="Test_Text">Hello Friends!</string>
    <string name="Password_Text">Constraseña</string>
    <string name="User_Text">Nombre De Usuario</string>
    <string name="Write">Escribe Algo!</string>
    <string name="Send">Enviar</string>
    <string name="Sent_Text">Text Message Of The Sender</string>
    <string name="Received_Text">Text Message Received</string>
    <string name="registro">registro</string>
    <string name="llevame_a_las_salas_de_chat">Ir Salas Chat</string>
    <string name="escribe_algo">Escribe Algo!</string>
    <string name="user_login">Log In</string>
    <string name="enter_email">Enter E-Mail</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_account">No tiene una cuenta? Regístrese</string>
    <string name="ingrese_email">Ingrese E-Mail</string>
    <string name="ingrese_contraseña">Ingrese Contraseña</string>
    <string name="sign_up">Sign Up</string>
    <string name="ya_registrado">Ya estas registrado? Haz Login aquí!</string>
    <string name="new_registro">Registro</string>
    <string name="logout">Log Out</string>
    <string name="sign_in_new">Ingresar</string>
    <string name="instructions">prueba</string>
    <string name="ingrese_user">Ingrese Nombre De Usuario</string>
    <string name="welcome">Bienvenido</string>
    <string name="career_select">Seleccione Su Carrera</string>
    <string name="eayg">EAyG</string>
    <string name="lfya">LFyA</string>
    <string name="rpa">RPA</string>
    <string name="reg">Registrarse</string>
    <string-array name="materias">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="am1">AMI</string>
    <string name="am2">AMII</string>
    <string name="edd">EdD</string>
    <string name="lpcc">LpCC</string>
    <string name="f1">FI</string>
    <string name="q1">QI</string>
    <string name="info_us">Información De Usuario</string>
    <string name="bienvenidoperfil">Bienvenido</string>
</resources>
