<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_registro_frame"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"
    tools:context="ceballosvitalepabloguillermosacomanifrancogomeztoms.unichat.FragmentoRegistro">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/nombre_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionHint="Nombre"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/confirm_registration_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cancel_registration_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@android:string/cancel"
        android:textStyle="bold" />

</LinearLayout>
